2008-11-11  Brian Curry  <http://www.raiazome.com/Brian_Curry>

	* modules/creole.pl (CreoleRule): Corrected a horrific link-caching
	issue with my last commit. Apologies to those who've already
	installed the last commit: this one should be (substantially!) more
	stable.

2008-11-06  Brian Curry  <http://www.raiazome.com/Brian_Curry>

	* modules/creole.pl (CreoleRule): Simplified implementation and
	integrated with improvements to CreoleHeaderRule().
	(CreoleHeaderRule): Improved -- remarkably. Header markup may now
	include all other (non-bol) markup, with exception of link markup
	producing a dirty HTML block. ("Dirty" link markup in header
	markup is stripped out, as appropriate.)
	(CreoleListAndNewlineRule): Simplified implementation.
	(CreoleRuleRecursive): Supported the global @HtmlAttrStack.
	(GetCreoleLinkHtml): New function, reducing code-bloat.
	* modules/creoleaddition.pl (CreoleAdditionRule): Simplified
	implementation; and handled small caps markup properly, now.

2008-11-04  Brian Curry  <http://www.raiazome.com/Brian_Curry>

	* modules/toc.pl (TocInit): Context-sensitively set the
	"$TocConvertH1TagsToH2Tags" option, if not already set.
	Basically, we only need the option enabled when the Usemod
	markup module is also installed.

2008-11-04  Brian Curry  <http://www.raiazome.com/Brian_Curry>

	* wiki.pl (@HtmlAttrStack): New global variable. This permits
	the InElement() and [Add|Close]HtmlEnvironment() family of
	functions to add, remove, and search against HTML tag attributes
	for all recently stacked HTML tag environments. Previously, tag
	attributes were not retained; they were simply returned as text
	from the AddHtmlEnvironment() function. Markup modules producing
	complex HTML -- particularly, complex HTML having deeply nested
	span or div tags -- can leverage the newly rewritten functions,
	below, to simplify, streamline, and "clean up" their markup code.
	(InElement): Rewritten to use this new variable.