@@ -1,3 +1,13 @@
+2008-11-12  Brian Curry  <http://www.raiazome.com/Brian_Curry>
+
+	* modules/poetry.pl ($PoetryIsHandlingXMLStyleMarkup): New option.
+	($PoetryIsHandlingCreoleStyleMarkup): New option.
+	(PoetryRule): Utilized new options, so as to permit several markup
+	styles, and simplified implementation, according to recent
+	refactoring in "wiki.pl". 
+	(CloseHtmlEnvironmentsPoetry): New function, permitting block-level
+	elements (e.g., lists, tables) within poems.
+
 2008-11-11  Brian Curry  <http://www.raiazome.com/Brian_Curry>
 
 	* modules/creole.pl (CreoleRule): Corrected a horrific link-caching
